Infrastructure/ecommerce-project/nginx/1-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: ecommerce-project
  annotations:
    cert-manager.io/cluster-issuer: ecommerce-production
spec:
  ingressClassName: external-nginx
  rules:
    - host: testk8s.mangoanywhere.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-svc
                port:
                  number: 12340
    - host: rabbitmq.testk8s.mangoanywhere.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
    - host: jaeger.testk8s.mangoanywhere.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-service
                port:
                  number: 16686
          
  tls:
    - hosts:
        - testk8s.mangoanywhere.com
      secretName: testk8s-mangoanywhere-com
    - hosts:
        - rabbitmq.testk8s.mangoanywhere.com
      secretName: rabbitmq-testk8s-mangoanywhere-com
    - hosts:
        - jaeger.testk8s.mangoanywhere.com
      secretName: jaeger-testk8s-mangoanywhere-com
